// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an article list header 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c1 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 20px;
}

.c2 {
  font-family: "TimesModern-Bold";
  font-size: 40px;
  color: #1D1D1B;
  padding-bottom: 20px;
  text-align: center;
}

.c3 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  border-top-color: #DBDBDB;
  border-top-style: solid;
  border-top-width: 1px;
  margin: 0 auto 25px auto;
  width: 200px;
}

@media (min-width:768px) {
  .c1 {
    padding-left: 0;
    padding-right: 0;
    max-width: 80.8%;
    padding-top: 5px;
    padding-bottom: 35px;
  }
}

@media (min-width:1024px) {
  .c1 {
    max-width: 56.2%;
    padding-top: 15px;
    padding-bottom: 40px;
  }
}

@media (min-width:768px) {
  .c2 {
    font-size: 50px;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 290px;
  }
}

<div
  alignItems="center"
  backgroundColor="#F9F9F9"
  borderBottomColor="#F0F0F0"
  borderBottomWidth={1}
  className="lcpHeading c0"
  flexDirection="column"
  minHeight={90}
  paddingLeft="10px"
  paddingRight="10px"
  paddingTop="40px"
  width="100%"
>
  <div
    className="c1"
  >
    <h1
      className="c2"
    >
      Test Name
    </h1>
    <div
      className="c3"
    />
    <div
      className="c4"
      color="#333333"
      fontFamily="TimesDigitalW04"
      fontSize={15}
      lineHeight="26px"
      paddingBottom="15px"
      textAlign="center"
    >
      Test 
      <i>
        italic 
      </i>
      <b>
        bold
      </b>
       text.
    </div>
  </div>
</div>
`;

exports[`2. an article list header loading 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

<div
  alignItems="center"
  backgroundColor="#F9F9F9"
  borderBottomColor="#F0F0F0"
  borderBottomWidth={1}
  className="c0"
  flexDirection="column"
  minHeight={90}
  paddingLeft="10px"
  paddingRight="10px"
  paddingTop="40px"
  width="100%"
/>
`;
